--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
   <script>
     async function go() {
       if ('serviceWorker' in navigator) {
-        await navigator.serviceWorker.register('/uv/sw.js', { scope: '/uv/' });
+        await navigator.serviceWorker.register('/uv/sw.js');
+
       }
 
       const input = document.getElementById('url').value;
