--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,19 @@
   <script src="/uv/uv.bundle.js"></script>
   <script src="/uv/uv.config.js"></script>
 
-  <script>
-    async function go() {
-      if ('serviceWorker' in navigator) {
-        await navigator.serviceWorker.register('/uv/sw.js', { scope: '/' });
-
-
-      }
-
-      const input = document.getElementById('url').value;
-      const encoded = __uv$config.encodeUrl(input);
-      location.href = '/uv/service/' + encoded;
+<script>
+  async function go() {
+    if ('serviceWorker' in navigator) {
+      const reg = await navigator.serviceWorker.register('/uv/sw.js');
+      await navigator.serviceWorker.ready;
     }
-  </script>
+
+    const input = document.getElementById('url').value;
+    const encoded = __uv$config.encodeUrl(input);
+
+    location.href = __uv$config.prefix + encoded;
+  }
+</script>
+
 </body>
 </html>
