--- a/public/index.html
+++ b/public/index.html
@@ -15,26 +15,41 @@
   
 <script>
   async function go() {
-    console.log('Go clicked');
+    try {
+      console.log('Go clicked');
 
-    if ('serviceWorker' in navigator) {
-      await navigator.serviceWorker.register('/uv/sw.js');
-      await navigator.serviceWorker.ready;
-      console.log('SW ready');
+      console.log('Ultraviolet:', Ultraviolet);
+      console.log('__uv$config:', __uv$config);
+
+      if ('serviceWorker' in navigator) {
+        console.log('Registering SW...');
+        await navigator.serviceWorker.register('/uv/sw.js');
+        console.log('Waiting SW ready...');
+        await navigator.serviceWorker.ready;
+        console.log('SW ready');
+      }
+
+      const input = document.getElementById('url').value.trim();
+      console.log('Raw input:', input);
+
+      const url = input.startsWith('http') ? input : 'https://' + input;
+      console.log('Final URL:', url);
+
+      const encoded = Ultraviolet.codec.xor.encode(url);
+      console.log('Encoded:', encoded);
+
+      const target = __uv$config.prefix + encoded;
+      console.log('Target:', target);
+
+      location.href = target;
+
+    } catch (e) {
+      console.error('GO ERROR:', e);
+      alert('GO ERROR: ' + e.message);
     }
-
-    const input = document.getElementById('url').value.trim();
-
-    // 自動で https:// 付ける
-    const url = input.startsWith('http') ? input : 'https://' + input;
-
-    const encoded = Ultraviolet.codec.xor.encode(url);
-    const target = __uv$config.prefix + encoded;
-
-    console.log('Target:', target);
-    location.href = target;
   }
 </script>
+
 
 </body>
 </html>
